Add missing JVM opts, reorder repo priority